--- a/footer.css
+++ b/footer.css
@@ -38,3 +38,11 @@
     font-size: 1.5rem;
   }
 }
+@media (max-width: 500px) {
+  .box-footer {
+    grid-template-columns: 1fr;
+    gap: 10px;
+  } .contato-footer li{
+    font-size: 0.9rem;
+  }
+}
